chore: complete SearchUsersByFeatureHandler